2875: Improved button styles

--- a/owa/app/js/components/patient-header/patient-header.scss
+++ b/owa/app/js/components/patient-header/patient-header.scss
@@ -8,75 +8,74 @@
  *  graphic logo is a trademark of OpenMRS Inc.
  */
 
-  .header-container {
-    margin-bottom: 20px;
-  }
-  
-  .title-container {
-    margin-bottom: 5px;
-  }
-  
-  .column {
-    line-height: 1.2;
-  }
-  
-  .label-field {
-    display: inline-block;
-    min-width: 175px;
-    font-family: CircularStd-Book;
-    color: #333333;
-    opacity: 0.5;
-    font-size: 14px;
-  }
-  
-  .value-field {
-    display: inline-block;
-    min-width: 175px;
-    font-size: 14px;
-    color: #2B3640;
-  }
-  
-  .title-field {
-    font-size: 28px;
-    color: #2B3640;
-  }
-  
-  .fields-row {
-    display: flex;
-  }
-  
-  .extra-title-fields span {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .buttons-span {
-    float: right;
-  }
-  
-  .buttons-span button {
-    margin-right: 5px;
-    color: white;
-    padding: 0.5rem 1.85rem;
-    font-size: 11px;
-    text-transform: uppercase;
-    background: #00455c;
-    border-color: #6c757d;
-  }
-  
-  
-  .fields-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .item {
-    flex: 1 0 calc(25% - 10px);
-    margin: 5px;
-  }
-  
-  .start-new-column {
-    flex-basis: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
+.header-container {
+  margin-bottom: 20px;
+}
+
+.title-container {
+  margin-bottom: 5px;
+}
+
+.column {
+  line-height: 1.2;
+}
+
+.label-field {
+  display: inline-block;
+  min-width: 175px;
+  font-family: CircularStd-Book;
+  color: #333333;
+  opacity: 0.5;
+  font-size: 16px;
+}
+
+.value-field {
+  display: inline-block;
+  min-width: 175px;
+  font-size: 16px;
+  color: #2b3640;
+}
+
+.title-field {
+  font-size: 28px;
+  color: #2b3640;
+}
+
+.fields-row {
+  display: flex;
+}
+
+.extra-title-fields span {
+  margin: 0;
+  padding: 0;
+}
+
+.buttons-span {
+  float: right;
+}
+
+.buttons-span button {
+  margin-right: 5px;
+  color: white;
+  padding: 0.5rem 1.85rem;
+  font-size: 11px;
+  text-transform: uppercase;
+  background: #00455c;
+  border-color: #6c757d;
+}
+
+.fields-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.item {
+  flex: 1 0 calc(25% - 10px);
+  margin: 5px;
+}
+
+.start-new-column {
+  flex-basis: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
