--- a/owa/app/js/components/openmrs-date-picker/openmrs-date-picker.scss
+++ b/owa/app/js/components/openmrs-date-picker/openmrs-date-picker.scss
@@ -8,106 +8,38 @@
  *  graphic logo is a trademark of OpenMRS Inc.
  */
 
+// Copied from react-datepicker css - no idea why it's not applied
+.react-datepicker__aria-live {
+  position: absolute;
+  clip-path: circle(0);
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  width: 1px;
+  white-space: nowrap;
+}
+
 .openmrs-date-picker {
-
-  .add-on {
-    position: relative;
-    left: -28px;
-    top: 11px;
-  }
-
-  .form-control {
-    // to be consistent with OpenMRS style (fixing OpenMRS React Components CSS issues)
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-  }
-
-  input {
-    // copied from OpenMRS main style (overriding not consistent styles from OpenMRS React Components)
-    min-width: 80%;
-    color: #363463;
-    display: block;
-    padding: 5px 10px;
-    margin: 0;
-    margin-top: 5px;
-    background-color: #FFF;
-    border: 1px solid #dddddd;
-  }
-
-  input:focus {
-    // copied from OpenMRS main style (overriding not consistent styles from OpenMRS React Components)
-    border: 2px solid #007fff;
-    background: #fffdf7;
-  }
-
-  .date-display {
-    display: flex;
-    justify-content: space-around;
-  }
-
   .react-datepicker {
-    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+    font-size: 14px;
+  }
 
-    .react-datepicker__header {
-      background-color: #FFF;
-      border-bottom: none;
-      font-family: "OpenSansBold";
+  @media only screen and (max-height: 768px) {
+    .react-datepicker {
+      font-size: 12px;
     }
+    .react-datepicker__week > div {
+      margin: 0.1em;
+    }
+  }
 
-    .react-datepicker__month {
-      margin: 0;
-      font-family: "OpenSans", Arial, sans-serif;
-    }
-
-    .react-datepicker__current-month {
-      color: #363463;
-    }
-
-    .react-datepicker__day-name {
-      color: #363463;
-    }
-
-    .react-datepicker__navigation--next {
-      border-left-color: #363463 !important;
-    }
-
-    .react-datepicker__navigation--previous {
-      border-right-color: #363463 !important;
-    }
-
-    .react-datepicker__day {
-      color: #363463;
-    }
-
-    .react-datepicker__day.react-datepicker__day--outside-month {
-      color: #999999;
-    }
-
-    .react-datepicker__day--selected {
-      // copied from OpenMRS datepicker style
-      background-color: #006dcc;
-      background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-      background-image: -ms-linear-gradient(top, #0088cc, #0044cc);
-      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-      background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-      background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-      background-image: linear-gradient(top, #0088cc, #0044cc);
-      background-repeat: repeat-x;
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0044cc', GradientType=0);
-      border-color: #0044cc #0044cc #002a80;
-      border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-      filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-      color: #fff;
-      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    }
-
-    button:hover {
-      background: transparent;
-      border-color: transparent;
-    }
+  // Fix for some broken CSS
+  // Similar style is done in CfL OWA in App.scss too
+  form select,
+  .form select,
+  select {
+    min-width: auto;
   }
 }
